# simple-http-server

./: .gitignore  CMakeLists.txt  README.md
data/: index.html  sample_header.txt
src/: CMakeLists.txt  dictionary.c  dictionary.h  main.c  server.c
src/dictionary/: CMakeLists.txt  dict_utilities.c  dict_utilities.h  dictionary.c  dictionary.h
src/file_utilities/: CMakeLists.txt  file_utilities.h
src/http/: CMakeLists.txt  request_parser.c  request_parser.h
src/request_parser/: CMakeLists.txt  request_parser.c
src/requests/: CMakeLists.txt  requests.c  requests.h
src/server/: CMakeLists.txt  server.c  server.h
src/string_utilities/: CMakeLists.txt  string_utilities.c  string_utilities.h
src/utils/: CMakeLists.txt  file_utilities.c  string_utilities.h
